@@ -1,11 +1,12 @@
 package hw1.processors;
 
+import edu.java.bot.clients.ScrapperClient;
 import edu.java.bot.processor.processors.ListHandler;
-import edu.java.database.SimpleDatabase;
-import java.util.ArrayList;
-import java.util.Collections;
+import edu.java.scrapper.dto.LinkResponse;
+import edu.java.scrapper.dto.ListLinksResponse;
+import java.net.URI;
+import java.util.List;
 import org.junit.jupiter.api.Test;
-import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.telegram.telegrambots.meta.api.objects.Message;
 import org.telegram.telegrambots.meta.api.objects.Update;
@@ -16,39 +17,59 @@ public class TestListHandler {
 
     @Test
     public void testListEmpty() {
-        try (MockedStatic<SimpleDatabase> utilities = Mockito.mockStatic(SimpleDatabase.class)) {
-            SimpleDatabase mockInstance = Mockito.mock(SimpleDatabase.class);
-            utilities.when(SimpleDatabase::getInstance).thenReturn(mockInstance);
+        // Setting mockUpdate
+        var mockUpdate = Mockito.mock(Update.class);
+        var mockedMessage = Mockito.mock(Message.class);
+        Mockito.when(mockUpdate.getMessage()).thenReturn(mockedMessage);
+        Mockito.when(mockUpdate.getMessage().getChatId()).thenReturn(1L);
 
-            Mockito.when(mockInstance.getUserLinksById(Mockito.anyLong())).thenReturn(Collections.emptyList());
+        // Creating empty ListLinksResponse
+        ListLinksResponse emptyListLinks = new ListLinksResponse();
+        emptyListLinks.setSize(0);
+        emptyListLinks.setLinks(List.of());
 
-            var mock = Mockito.mock(Update.class);
-            var mockedMessage = Mockito.mock(Message.class);
-            Mockito.when(mock.getMessage()).thenReturn(mockedMessage);
-            Mockito.when(mock.getMessage().getChatId()).thenReturn(1L);
-            var method = new ListHandler();
-            assertThat(method.handle(mock)).isEqualTo(EMPTY_LIST_MESSAGE);
-        }
+        // Setting mock scrapperClient
+        var mockScrapperClient = Mockito.mock(ScrapperClient.class);
+        Mockito.when(mockScrapperClient.getAllTrackedLinks(
+            Mockito.anyLong(), Mockito.anyInt(), Mockito.anyInt()
+        )).thenReturn(emptyListLinks);
+
+        // Assertions
+        var method = new ListHandler(mockScrapperClient);
+        assertThat(method.handle(mockUpdate)).isEqualTo(EMPTY_LIST_MESSAGE);
     }
 
     @Test
     public void testListNotEmpty() {
-        try (MockedStatic<SimpleDatabase> utilities = Mockito.mockStatic(SimpleDatabase.class)) {
-            SimpleDatabase mockInstance = Mockito.mock(SimpleDatabase.class);
-            utilities.when(SimpleDatabase::getInstance).thenReturn(mockInstance);
-            var link = "google.com";
+        // Setting mockUpdate
+        var mockUpdate = Mockito.mock(Update.class);
+        var mockedMessage = Mockito.mock(Message.class);
+        Mockito.when(mockUpdate.getMessage()).thenReturn(mockedMessage);
+        Mockito.when(mockUpdate.getMessage().getChatId()).thenReturn(1L);
 
-            Mockito.when(mockInstance.getUserLinksById(Mockito.anyLong())).thenReturn(new ArrayList<>() {{
-                add(link);
-            }});
+        // Creating not-empty ListLinksResponse
+        ListLinksResponse hasOneListLinks = new ListLinksResponse();
+        hasOneListLinks.setSize(1);
+        hasOneListLinks.setLinks(List.of(new LinkResponse() {{
+            setId(1L);
+            setUrl(URI.create("vk.com"));
+        }}));
 
-            var mock = Mockito.mock(Update.class);
-            var mockedMessage = Mockito.mock(Message.class);
-            Mockito.when(mock.getMessage()).thenReturn(mockedMessage);
-            Mockito.when(mock.getMessage().getChatId()).thenReturn(1L);
+        // Setting mock scrapperClient
+        var mockScrapperClient = Mockito.mock(ScrapperClient.class);
+        Mockito.when(mockScrapperClient.getAllTrackedLinks(
+            Mockito.anyLong(), Mockito.anyInt(), Mockito.anyInt()
+        )).thenReturn(hasOneListLinks);
 
-            var method = new ListHandler();
-            assertThat(method.handle(mock)).isEqualTo(link);
-        }
+        // Assertions
+        var method = new ListHandler(mockScrapperClient);
+        assertThat(method.handle(mockUpdate)).isEqualTo(convertToString(hasOneListLinks));
+    }
+
+    private String convertToString(ListLinksResponse hasOneListLinks) {
+        return String.join(
+            "\n",
+            hasOneListLinks.getLinks().stream().map(e -> e.getUrl().toString()).toList()
+        );
     }
 }
